pic compression and Gem app

--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -125,7 +125,7 @@ footer {
 }
 
 .photography {
-              background-image:  url("picture2.jpg");
+              background-image:  url("gem-thumbnail.png");
 }
 
 .mobile {
